Fix vertical alignment and sizes on text and scale free values.

--- a/client/src/app/sheet/free-value/scale/scale.component.scss
+++ b/client/src/app/sheet/free-value/scale/scale.component.scss
@@ -21,6 +21,7 @@
 .row {
   display: grid;
   grid-template-columns: max-content auto max-content;
+  height: 1.5em;
 }
 
 .row.edit {
