--- a/client/src/app/sheet/free-value/text/text.component.scss
+++ b/client/src/app/sheet/free-value/text/text.component.scss
@@ -2,8 +2,6 @@
   border: none;
   border-bottom: 1px solid #666666;
   width: 100%;
-  height: 1.325em;
-  line-height: 1.25;
 }
 
 .value.edit {
@@ -39,6 +37,7 @@ div.editNote textarea {
 .row {
   display: grid;
   grid-template-columns: max-content auto;
+  height: 1.5em;
 }
 
 div.note {
